Updated pt1+2 to current online lesson. More challanges, loops, etc

--- a/notebooks/Intro_to_Python_Day1_Pt1.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt1.ipynb
@@ -325,7 +325,7 @@
    "metadata": {},
    "source": [
     "#### Sequences: Lists and Tuples\n",
-    "##### Lists\n",
+    "#### Lists\n",
     "*Lists* are a common data structure to hold an ordered sequence of elements. Each element can be accessed by an index. Note that Python indexes start with 0 instead of 1:\n",
     "\n"
    ]
@@ -337,6 +337,24 @@
    "outputs": [],
    "source": [
     "# Creating and indexing a list of numbers\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A for loop can be used to access the elements in a list or other Python data structure one at a time:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# loop over list, print elements\n"
    ]
   },
   {
@@ -377,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Tuples\n",
+    "#### Tuples\n",
     "A tuple is similar to a list in that it's an ordered sequence of elements. However, tuples cannot be changed once created (they are \"immutable\"). Tuples are created by placing comma-separated values inside parentheses ()."
    ]
   },
@@ -395,30 +413,55 @@
    "metadata": {},
    "source": [
     "##### ✏️ Challenge\n",
-    "1. What happens when you execute `a_tuple[1] = 5` vs. `a_list[1] = 5`?\n",
-    "2. What does `type(a_tuple)` tell you about `a_tuple`?"
+    "1. What happens when you execute `a_list[1] = 5`?\n",
+    "2. What happens when you execute `a_tuple[1] = 5`? Why is this different to 1?\n",
+    "3. What does `type(a_tuple)` tell you about `a_tuple`?\n",
+    "4. What information does the built-in function len() provide? Does it provide the same information on both tuples and lists? Does the help() function confirm this? "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "#1 \n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "#2 \n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "#3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#4\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -470,6 +513,40 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using for loops with dictionaries is a little more complicated. We can do this in two ways:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loop over items\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# loop over keys\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -621,7 +698,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -635,9 +712,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.10"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "324df05bc83ac8535d983840ebbba21cdf9ff41a1d9062aaa5a74c55a9fc1a2b"
@@ -645,5 +721,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
