--- a/notebooks/Intro_to_Python_Day1_Pt2.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt2.ipynb
@@ -383,10 +383,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we can do this, let's create a list of unique site IDs (`plot_id`) found in the survey data. Call it `site_names`."
+    "#### ✏️ Challenge - Statistics\n",
+    "1. Create a list of unique site IDs (“plot_id”) found in the surveys data. Call it `site_names`. How many unique sites are there in the data? How many unique species are in the data?\n",
+    "2. What is the difference between `len(site_names)` and `surveys_df['plot_id'].nunique()`?"
    ]
   },
   {
@@ -395,42 +404,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Unique site ids list\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "How many unique sites are there in the data?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check the length of the list\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Single line solution\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Describe in Pandas\n",
-    "We can calculate basic statistics for all records in a single column using the Pandas `describe` function which will return descriptive stats including: mean, median, max, min, std, and count for a particular column in the data. However, it will only return summary values for columns containing numeric data.\n",
+    "#1.\n",
     "\n",
-    "For example, we might want to calculate the average weight of all individuals per site."
+    "site_names ="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Groups in Pandas \n",
+    "We often want to calculate summary statistics grouped by subsets or attributes within fields of our data. For example, we might want to calculate the average weight of all individuals per site.\n",
+    "\n",
+    "We can calculate basic statistics for all records in a single column using the Pandas `describe` function"
    ]
   },
   {
@@ -455,7 +458,148 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also extract one specific metric if we wish."
+    "We can also extract specific metrics if we wish."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mean\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Others?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But if we want to summarize by one or more variables, for example `sex`, we can use Pandas’ .groupby method. Once we’ve created a groupby DataFrame, we can quickly calculate summary statistics by a group of our choice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Group data by sex\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The pandas function describe will return descriptive stats including: mean, median, max, min, std and count for a particular column in the data. Pandas’ describe function will only return summary values for columns containing numeric data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Summary statistics for all numeric columns by sex\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Provide the mean for each numeric column by sex\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### ✏️ Challenge - Summary Data\n",
+    "1. How many recorded individuals are female `F` and how many male `M`?\n",
+    "2. What happens when you group by two columns using the following syntax and then calculate mean values?\n",
+    " - `grouped_data2 = surveys_df.groupby(['plot_id', 'sex'])`\n",
+    " - `grouped_data2.mean()`\n",
+    "3.  Summarize weight values for each site in your data. HINT: you can use the following syntax to only create summary statistics for one column in your data. by_`site['weight'].describe()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quickly Creating Summary Counts in Pandas\n",
+    "\n",
+    "Let’s next count the number of samples for each species. We can do this in a few ways, but we’ll use groupby combined with a count() method. Name the variables `species_counts`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Count the number of samples by species\n",
+    "species_counts ="
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or, we can also count just the rows that have the species “DO”:"
    ]
   },
   {
@@ -469,8 +613,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Groups in Pandas\n",
-    "We often want to calculate summary statistics grouped by subsets or attributes within fields of our data however. For example, we want to know what the summary statistics look like split by `sex`. We can use Pandas' `.groupby` method, which creates a groupby DataFrame on which we can perform other Pandas methods."
+    "#### ✏️ Challenge - Make a list\n",
+    "What’s another way to create a list of species and associated `count` of the records in the data? Hint: you can perform `count`, `min`, etc. functions on groupby DataFrames in the same way you can perform them on regular DataFrames."
    ]
   },
   {
@@ -478,60 +622,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Grouping surveys_df by sex\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Summary statistics for the new df\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Provide the mean for each numeric column by sex\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `groupby` function is powerful in that it allows us to quickly generate summary stats, not just for one group, but several.\n",
-    "\n",
-    "For example, we might want to calculate the average weight of individuals per plot."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate the average weight of all individuals per plot\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Or, we might want to know how many males and females we have at each site."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Count the number of each sex per site\n"
+    "---"
    ]
   },
   {
@@ -571,10 +668,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Plot year vs weight\n"
+    "# Make sure figures appear inline in our Ipython Notebook \n",
+    "# (sometimes automatic, good to always include!)\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -583,38 +684,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a quick bar chart\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# We can also look at how many animals were captured in each site\n"
+    "# Plot species_counts\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ✏️ Challenge\n",
-    "These challenge activities involve plotting data. It's often best to create an object to plot first, then call the .plot() method on it (see the skeleton code below with 'avrg_wgt')\n",
-    "1. Create a scatter plot of average weight across all species per plot.  \n",
-    " - The final plots x-axis should be 'plot', and the y axis should be 'wgt'.  \n",
-    " - If you use `avrg_wgt.plot()`, you will by default get a **line** plot. To turn this into a scatter plot, add the    <u>optional</u> **keyword argument** (aka \"**kwarg**\") `style='o'` to plot arguments:\n",
-    "    ```\n",
-    "    avrg_wgt.plot(style='o')\n",
-    "    ```\n",
-    " - If you're missing a label, try adding the **kwarg** xlabel or ylabel to the argument of plot, separated by commas:\n",
-    "   ```\n",
-    "   avrg_wgt.plot(xlabel='your_x_label', ylabel='your_y_label')\n",
-    "   ```\n",
-    "2. Create the same plot, but with average weight for each sex per plot. Hint, you will need to `unstack` when plotting. x-axis = plot, y-axis = wgt, different lines for each sex. This is done for you in the skeleton code provided.\n",
+    "We can also look at how many animals were captured in each site:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Get a var total_count\n",
     "\n",
-    "3. Create a trend plot of the average weight per plot over time. x-axis = year, y-axis = wgt, different lines for each plot.\n",
-    " - Extra challenge question: Why do you need to unstack for q2 and a3?"
+    "# Now plot it\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ✏️ Challenge - Plots\n",
+    "These challenge activities involve plotting data. It's often best to store the data to be plotted in a variable first, then call the .plot() method on it\n",
+    "\n",
+    "1. Create a plot of average weight across all species per site.\n",
+    "2. Create a plot of total males versus total females for the entire dataset."
    ]
   },
   {
@@ -623,11 +724,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Group by plot_id and calculate mean weight\n",
-    "avrg_wgt = surveys_df.groupby('plot_id').mean()['weight']\n",
-    "\n",
-    "# Let's plot, you should see x-axis -> plot_id, y-axis -> weight\n",
-    "..."
+    "#1 \n",
+    "\n"
    ]
   },
   {
@@ -636,12 +734,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Group by plot_id and sex, then calculate mean weight\n",
-    "avrg_wgt = surveys_df.groupby(['plot_id', 'sex']).mean()['weight']\n",
+    "# 2\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🔥 Summary Plotting Challenge\n",
     "\n",
-    "# Let's plot, you should see x-axis -> plot_id, y-axis -> weight, different lines for sex\n",
-    "# You need to use the .unstack() method before the .plot() for this to work\n",
-    "..."
+    "Create a stacked bar plot, with weight on the Y axis, and the stacked variable being sex. The plot should show total weight by sex for each site. Some tips are below to help you solve this challenge:\n",
+    "\n",
+    "- For more information on pandas plots, see [pandas’ documentation page on visualization](https://pandas.pydata.org/pandas-docs/stable/user_guide/visualization.html#basic-plotting-plot).  \n",
+    "- You can use the code that follows to create a stacked bar plot but the data to stack need to be in individual columns.   \n",
+    "\n",
+    "Here’s a simple example with some data where ‘a’, ‘b’, and ‘c’ are the groups, and ‘one’ and ‘two’ are the subgroups.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Example plots\n",
+    "d = {'one' : pd.Series([1., 2., 3.], index=['a', 'b', 'c']), 'two' : pd.Series([1., 2., 3., 4.], index=['a', 'b', 'c', 'd'])}\n",
+    "pd.DataFrame(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Plotting \n",
+    "my_df = pd.DataFrame(d)\n",
+    "my_df.plot(\n",
+    "    kind='bar', stacked=True, title=\"The title of my graph\", \n",
+    "    xlabel=\"This is the x axis label\", ylabel = \"This is the y axis label\"\n",
+    ")\n",
+    "# Notice the multi-line expression used above within the `plot` function's brakcets.\n",
+    "# When doing this, dont forget your commas!\n",
+    "\n",
+    "# If you want to customize your plots further, try running `help(my_df.plot)` \n",
+    "# to read the docstring for all of possible uses!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can use the `.unstack()` method to transform grouped data into columns for each plotting. Try running `.unstack()` on some DataFrames above and see what it yields."
    ]
   },
   {
@@ -650,13 +806,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Group by year and plot_id, then calculate mean weight\n",
-    "# wgt_by_time = surveys_df.groupby(['year', 'plot_id']).mean()['weight']\n",
-    "\n",
-    "# Let's plot, you should see x-axis -> year, y-axis -> weight, different lines for plot\n",
-    "# You need to use the .unstack() method before the .plot() for this to work\n",
-    "..."
+    "# Unstack\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Start by transforming the grouped data (by site and sex) into an unstacked layout, then create a stacked plot.\n",
+    "Good luck with the challenge!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Challenge cells\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -680,7 +857,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('cic-workshop')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -694,9 +871,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.10"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "898930c4a353cd4bdff091a46da5cc4a2ffb7f83893d6981c0c4cfa6b3e92a4f"
@@ -704,5 +880,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
