--- a/notebooks/Intro_to_Python_Day1_Pt3.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt3.ipynb
@@ -63,7 +63,6 @@
    "source": [
     "# Make sure pandas is loaded\n",
     "\n",
-    "\n",
     "# Read in the survey CSV\n"
    ]
   },
@@ -91,8 +90,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TIP: use the .head() method to only see the first few rows of the dataframe\n",
-    "\n",
+    "# TIP: use the .head() method to only see the first few rows of the dataframe\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "# Method 1: Select a 'subset' of the data using the column name\n"
    ]
   },
@@ -159,6 +167,38 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Python tells us what type of error it is in the traceback, at the bottom it says KeyError: 'speciess' which means that speciess is not a valid column name (nor a valid key in the related Python data type dictionary)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Extracting Ranged based Subsets: Slicing\n",
+    "#### 🔔 **REMINDER**:\n",
+    "\n",
+    "The Python language and its modules (such as Pandas) define reserved words that should not be used as identifiers when assigning objects and variable names. Examples of reserved words in Python include Boolean values `True` and `False`, operators `and`, `or`, and `not`, among others. The full list of reserved words for Python version 3 is provided at https://docs.python.org/3/reference/lexical_analysis.html#identifiers.  \n",
+    " \n",
+    "When naming objects and variables, it’s also important to avoid using the names of built-in data structures and methods. For example, a list is a built-in data type. It is possible to use the word ‘list’ as an identifier for a new object, for example `list = ['apples', 'oranges', 'bananas']`. However, you would then be unable to create an empty list using `list()` or convert a tuple to a list using `list(sometuple)`.\n",
+    "\n",
+    "Instead, use more descriptive variable names, such as `fruit_list = ['apples', 'oranges', 'bananas']`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---"
@@ -168,8 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extracting Ranged based Subsets: Slicing\n",
-    "**REMINDER**: Python uses 0-based indexing.\n",
+    "#### 🔔 **REMINDER**: Python uses 0-based indexing.\n",
     "\n",
     "Let's remind ourselves that Python uses 0-based indexing. This means that the first element in an object is located at position `0`. This is different from other tools like R and Matlab that index elements within objects starting at 1.\n",
     "\n",
@@ -397,9 +436,7 @@
     "\n",
     "We can select specific ranges of our data in both the row and column directions using either label or integer-based indexing.\n",
     "- `loc`: indexing via *labels* (which can be integers)\n",
-    "- `iloc`: indexing via *integers*\n",
-    "\n",
-    "![dataframe_indexing](https://vrzkj25a871bpq7t1ugcgmn9-wpengine.netdna-ssl.com/wp-content/uploads/2019/01/pandas-dataframe-has-indexes.png)"
+    "- `iloc`: indexing via *integers*\n"
    ]
   },
   {
@@ -830,7 +867,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('cic-workshop')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -844,9 +881,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.10"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "898930c4a353cd4bdff091a46da5cc4a2ffb7f83893d6981c0c4cfa6b3e92a4f"
@@ -854,5 +890,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
