--- a/notebooks/Intro_to_Python_Day1_Pt3.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt3.ipynb
@@ -555,9 +555,13 @@
     "### ✏️ Challenge\n",
     "1. What happens when you execute the following:\n",
     "    - `surveys_df[0:1]`\n",
+    "    - `surveys_df[0]`\n",
     "    - `surveys_df[:4]`\n",
     "    - `surveys_df[:-4]`\n",
     "2. What happens when you call:\n",
+    "    - `surveys_df.iloc[0:1]`\n",
+    "    - `surveys_df.iloc[0]`\n",
+    "    - `surveys_df.iloc[:4, :]`\n",
     "    - `surveys_df.iloc[0:4, 1:4]`\n",
     "    - `surveys_df.loc[0:4, 1:4]`\n",
     "\n",
@@ -597,6 +601,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 1d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 2a\n"
    ]
   },
@@ -606,7 +619,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2b\n"
+    "# 2b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2d\n"
    ]
   },
   {
@@ -669,6 +700,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Python Syntax Cheat Sheet\n",
+    "\n",
     "We can use the syntax below when querying data by criteria from a DataFrame:\n",
     "- Equals `==`\n",
     "- Not equals: `!=`\n",
@@ -676,6 +709,59 @@
     "- Greater than or equal to `>=`\n",
     "- Less than or equal to `<=`\n",
     "\n",
+    "### ✏️ Challenge - Queries\n",
+    "1. Select a subset of rows in the surveys_df DataFrame that contain data from the year 1999 and that contain weight values less than or equal to 8. How many rows did you end up with? What did your neighbor get?\n",
+    "\n",
+    "2. You can use the isin command in Python to query a DataFrame based upon a list of values as follows:\n",
+    "```py\n",
+    "surveys_df[surveys_df['species_id'].isin([listGoesHere])]\n",
+    "```\n",
+    "\n",
+    "3. Experiment with other queries. Create a query that finds all rows with a weight value greater than or equal to 0.\n",
+    "\n",
+    "4. The ~ symbol in Python can be used to return the OPPOSITE of the selection that you specify. It is equivalent to is not in. Write a query that selects all rows with sex NOT equal to ‘M’ or ‘F’ in the “surveys” data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1 \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
@@ -770,6 +856,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# What does this do?\n",
     "empty_weights = surveys_df[pd.isnull(surveys_df['weight'])]['weight']\n",
     "print(empty_weights)"
    ]
@@ -785,21 +872,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ✏️ Challenge\n",
-    "1. Select a subset of rows in the `surveys_df` DataFrame that contain data from\n",
-    "   the year 1999 and that contain weight values less than or equal to 8. How\n",
-    "   many rows did you end up with? What did your neighbor get?\n",
-    "2. You can use the `isin` command in python to query a DataFrame based upon a\n",
-    "   list of values as follows:\n",
-    "   `surveys_df[surveys_df['species'].isin([listGoesHere])]`.\n",
-    "   \n",
-    "   Use the `isin` function to find all plots that contain particular species in the surveys DataFrame. How many records contain these values?\n",
-    "3. Experiment with other queries. Create a query that finds all rows with a weight value > or equal to 0.\n",
-    "4. The `~` symbol in Python can be used to return the OPPOSITE of the selection that you specify in python. \n",
-    "It is equivalent to **is not in**. Write a query that selects all rows that are NOT equal to 'M' or 'F' in the surveys\n",
-    "data.\n",
-    "5. Create a new DataFrame that only contains observations with sex values that are not female or male. Assign each sex value in the new DataFrame to a new value of ‘x’. Determine the number of null values in the subset.\n",
-    "6. Create a new DataFrame that contains only observations that are of sex male or female and where weight values are greater than 0. Create a stacked bar plot of average weight by plot_id with male vs female values stacked for each plot."
+    "#### 🔥 Challenge - Putting it all together\n",
+    "1. Create a new DataFrame that only contains observations with sex values that are not female or male. Print the number of rows in this new DataFrame. Verify the result by comparing the number of rows in the new DataFrame with the number of rows in the surveys DataFrame where sex is null.\n",
+    "\n",
+    "\n",
+    "2. Create a new DataFrame that contains only observations that are of sex male or female and where weight values are greater than 0. Create a stacked bar plot of average weight by plot with male vs female values stacked for each plot."
    ]
   },
   {
@@ -818,33 +895,6 @@
    "outputs": [],
    "source": [
     "# 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 5"
    ]
   },
   {
