--- a/notebooks/Intro_to_Python_Day1_Pt6.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt6.ipynb
@@ -5,6 +5,7 @@
    "id": "9f9b762f",
    "metadata": {},
    "source": [
+    "# CIC Carpentries Workshop - Day 1 - Part 6\n",
     "# Data Workflows and Automation\n",
     "This lesson is adapted from the Data Carpentries [Data Analysis and Visualization in Python for Ecologists](https://datacarpentry.org/python-ecology-lesson/index.html) lesson.\n",
     "\n",
@@ -955,7 +956,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
