Updated pt4 challenges

--- a/notebooks/Intro_to_Python_Day1_Pt4.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt4.ipynb
@@ -77,7 +77,10 @@
    "metadata": {},
    "source": [
     "# Text Data Type\n",
-    "The text data type is known as a 'string' in Python, or 'object' in Pandas. Strings can contain numbers and / or characters. For example, a string might be a word, a sentence, or several sentences. A Pandas object might also be a plot name like ‘plot1’. A string can also contain or consist of numbers. For instance, ‘1234’ could be stored as a string, as could ‘10.23’. However **strings that contain numbers can not be used for mathematical operations!**\n",
+    "The text data type is known as a 'string' in Python, or 'object' in Pandas. Strings can contain numbers and / or characters. For example, a string might be a word, a sentence, or several sentences. A Pandas object might also be a plot name like ‘plot1’. A string can also contain or consist of numbers. For instance, ‘1234’ could be stored as a string, as could ‘10.23’. However **strings that contain numbers can not be used for mathematical operations!**  \n",
+    "\n",
+    "## Pandas vs Python\n",
+    "Pandas and base Python use slightly different names for data types. More on this is in the table below:\n",
     "\n",
     "| Pandas Type  |  Native Python Type  | Description  |\n",
     "|:---:|:---:|:---:|\n",
@@ -169,7 +172,9 @@
    "id": "52810ace",
    "metadata": {},
    "source": [
-    "The type `int64` tells us that Python is storing each value within this column as a 64 bit integer. We can use the `dat.dtypes` command to view the data type for each column in a DataFrame (all at once)."
+    "The type `int64` tells us that Python is storing each value within this column as a 64 bit integer.   \n",
+    " \n",
+    "We can use the `dat.dtypes` command to view the data type for each column in a DataFrame (all at once)."
    ]
   },
   {
@@ -261,8 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now try \"Integer\" division\n",
-    "3//5"
+    "# Now try \"Integer\" division\n"
    ]
   },
   {
@@ -296,6 +300,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e628a9e-923c-4eb2-943a-fed41714013e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "2046edad",
    "metadata": {},
@@ -322,8 +334,10 @@
    "metadata": {},
    "source": [
     "### ✏️ Challenge:\n",
-    "Try converting the column plot_id to floats using:\n",
-    "`surveys_df.plot_id.astype(\"float\")`\n",
+    "Try converting the column plot_id to floats using:  \n",
+    "```py\n",
+    "surveys_df.plot_id.astype(\"float\")\n",
+    "```\n",
     "\n",
     "Then try converting `weight` to an integer. What goes wrong here? What is Pandas telling you? We will talk about some solutions to this later."
    ]
@@ -475,12 +489,14 @@
    "id": "49613333",
    "metadata": {},
    "source": [
-    "### ✏️ Challenge: \n",
+    "### ✏️ Challenge - Counting\n",
     "Count the number of missing values per column of the original dataframe `surveys_df`\n",
     "\n",
-    "Hint: As with almost everything programming, there are multiple ways to do this.  \n",
+    "Hints:  \n",
+    "As with almost everything programming, there are multiple ways to do this.  \n",
     "  Try the method `.count()`, which gives you the number of non-NA observations per column (we need the NA observations per column).  \n",
-    "  A different way you could try as well is by using the `.isnull()` method."
+    "  \n",
+    "You could also try using the `.isnull()` or `.isna()` methods too."
    ]
   },
   {
