Minor changes to challenge wordings

--- a/notebooks/Intro_to_Python_Day1_Pt5.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt5.ipynb
@@ -214,14 +214,14 @@
    "id": "c1fa89cd",
    "metadata": {},
    "source": [
-    "### ✏️ Challenge:\n",
+    "### ✏️ Challenge - Combine Data:\n",
     "In the data folder, there are two survey data files: surveys2001.csv and surveys2002.csv. Your tasks are:\n",
     "\n",
     "1. Read the data into Python \n",
     "2. Combine the files to make one new data frame. \n",
     "3. Create a plot of average plot weight by year grouped by sex. \n",
     "4. Export your results as a CSV \n",
-    "5. Make sure it reads back into Python properly."
+    "5. Make sure the fiel you exported reads back into Python properly."
    ]
   },
   {
@@ -576,7 +576,9 @@
     "\n",
     "2. Calculate a diversity index of your choice for control vs rodent exclosure plots. The index should consider both species abundance and number of species. You might choose to use the simple biodiversity index described [here](https://www.amnh.org/learn-teach/curriculum-collections/biodiversity-counts/plant-ecology/how-to-calculate-a-biodiversity-index) which calculates diversity as:\n",
     "\n",
-    "        the number of species in the plot / the total number of individuals in the plot = Biodiversity index.\n"
+    "        Biodiversity index. = The number of species in the plot / the total number of individuals in the plot \n",
+    "\n",
+    "Your final plot should be of plot_id (y axis) vs diversity index (x axis)"
    ]
   },
   {
