Changed challenge text a bit, removed day2 reference

--- a/notebooks/Intro_to_Python_Day1_Pt6.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt6.ipynb
@@ -133,6 +133,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "214842c5-5520-4db0-b3e3-8d48be686600",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d7290cbf",
    "metadata": {},
    "source": [
@@ -313,7 +321,7 @@
    "id": "c9c6a0af",
    "metadata": {},
    "source": [
-    "✏️ Challenge: Modifying loops\n",
+    "### ✏️ Challenge: Modifying loops\n",
     "\n",
     "\n",
     "1. Some of the surveys you saved are missing data (they have null values that show up as NaN - Not A Number - in the DataFrames and do not show up in the text files). Modify the for loop so that the entries with null values are not included in the yearly files.\n",
@@ -338,6 +346,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c089ec4f-21b6-422f-9f7a-86d8cba52cb0",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -532,7 +548,7 @@
    "id": "5fabb9ad",
    "metadata": {},
    "source": [
-    "## ✏️ Challenge - Functions\n",
+    "## ✏️ Challenge - More Functions\n",
     "1. Add two arguments to the functions we wrote that take the path of the directory where the files will be written and the root of the file name. Create a new set of files with a different name in a different directory.\n",
     "2. How could you use the function `yearly_data_csv_writer` to create a CSV file for only one year? (Hint: think about the syntax for `range`)\n",
     "3. Make the functions return a list of the files they have written. There are many ways you can do this (and you should try them all!): either of the functions can print to screen, either can use a return statement to give back numbers or strings to their function call, or you can use some combination of the two. You could also try using the os library to list the contents of directories.\n",
@@ -616,7 +632,7 @@
    "id": "e467e6f6",
    "metadata": {},
    "source": [
-    "## ✏️ Challenge - Functions\n",
+    "## ✏️ Challenge - Variables\n",
     "\n",
     "\n",
     "1. What type of object corresponds to a variable declared as None? (Hint: create a variable set to None and use the function type())\n",
@@ -865,7 +881,7 @@
    "id": "977cbd8f",
    "metadata": {},
    "source": [
-    "# ❗Key Points from today and yesterday\n",
+    "# ❗Key Points from all of today\n",
     "\n",
     "\n",
     "\n",
@@ -914,30 +930,6 @@
     " \n",
     "- Functions are 💯\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2cfa3dbb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f4f43ef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92681cc6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
