Removed old answer notebooks. Added link in pt6 to answers online

--- a/notebooks/Intro_to_Python_Day1_Pt6.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt6.ipynb
@@ -928,7 +928,12 @@
     "\n",
     "- Loops are 🔥\n",
     " \n",
-    "- Functions are 💯\n"
+    "- Functions are 💯\n",
+    "\n",
+    "\n",
+    "## 🥷 Sneaky section: Answers\n",
+    "Answers to all of the notebooks can be found at the carpentries website:\n",
+    "https://datacarpentry.org/python-ecology-lesson/index.html"
    ]
   }
  ],
