Rebrand to CIDS

--- a/notebooks/Intro_to_Python_Day1_Pt2.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt2.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CIC Carpentries Workshop - Day 1 - Part 2\n",
+    "# CIDS Carpentries Workshop - Day 1 - Part 2\n",
     "This lesson is adapted from the Data Carpentries [Data Analysis and Visualization in Python for Ecologists](https://datacarpentry.org/python-ecology-lesson/index.html) lesson.\n",
     "\n",
     "---\n",
     "## How to use a Jupyter Notebook\n",
     "Online Resources:\n",
     "- https://jupyter-notebook-beginner-guide.readthedocs.io/en/latest/index.html\n",
-    "- https://www.packtpub.com/books/content/getting-started-jupyter-notebook-part-1\n",
+    "- https://code.visualstudio.com/docs/datascience/jupyter-notebooks \n",
     "\n",
     "Useful Tips:\n",
     "- The notebook autosaves\n",
@@ -308,9 +308,10 @@
    "source": [
     "#### ✏️ Challenge\n",
     "Using our DataFrame `surveys_df`, try out the attributes and methods to see what they return.\n",
-    "1. `surveys_df.shape` - take a note of the output of `shape` - what format does it return the shape of the DataFrame in?\n",
-    "2. `surveys_df.head(15)`\n",
-    "3. `surveys_df.tail()`"
+    "1. `surveys_df.columns`\n",
+    "2. `surveys_df.shape` - take a note of the output of `shape` - what format does it return the shape of the DataFrame in?\n",
+    "3. `surveys_df.head(15)`\n",
+    "4. `surveys_df.tail()`"
    ]
   },
   {
@@ -338,6 +339,15 @@
    "outputs": [],
    "source": [
     "# 3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4 "
    ]
   },
   {
