--- a/notebooks/Intro_to_Python_Day1_Pt3.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt3.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CIC Carpentries Workshop - Day 1 - Part 3\n",
+    "# CIDS Carpentries Workshop - Day 1 - Part 3\n",
     "This lesson is adapted from the Data Carpentries [Data Analysis and Visualization in Python for Ecologists](https://datacarpentry.org/python-ecology-lesson/index.html) lesson.\n",
     "\n",
     "---\n",
     "## How to use a Jupyter Notebook\n",
     "Online Resources:\n",
     "- https://jupyter-notebook-beginner-guide.readthedocs.io/en/latest/index.html\n",
-    "- https://www.packtpub.com/books/content/getting-started-jupyter-notebook-part-1\n",
+    "- https://code.visualstudio.com/docs/datascience/jupyter-notebooks \n",
     "\n",
     "Useful Tips:\n",
     "- The notebook autosaves\n",
@@ -435,8 +435,8 @@
     "### Slicing Subsets of Rows and Columns in Python\n",
     "\n",
     "We can select specific ranges of our data in both the row and column directions using either label or integer-based indexing.\n",
-    "- `loc`: indexing via *labels* (which can be integers)\n",
-    "- `iloc`: indexing via *integers*\n"
+    "- `loc`: *label* based indexing where you can refer to rows and columns by their name (which can be integers)\n",
+    "- `iloc`: *integer* based indexing counting from 0\n"
    ]
   },
   {
@@ -504,7 +504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**NOTE:**: Labels must be found in the DataFrame or you will get a `KeyError`.\n",
+    "**NOTE**: Labels must be found in the DataFrame or you will get a `KeyError`.\n",
     "\n",
     "Indexing by labels `loc` differs from indexing by integers `iloc`. With `loc`, both the start bound and the stop bound are **inclusive**. When using `loc`, integers *can* be used, but the integers refer to the index label and not the position.  For example, using `loc` and selecting 1:4 will get a different result than using `iloc` to select rows 1:4."
    ]
