--- a/notebooks/Intro_to_Python_Day1_Pt4.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt4.ipynb
@@ -5,14 +5,14 @@
    "id": "91a434d6",
    "metadata": {},
    "source": [
-    "# CIC Carpentries Workshop - Day 1 - Part 4\n",
+    "# CIDS Carpentries Workshop - Day 1 - Part 4\n",
     "This lesson is adapted from the Data Carpentries [Data Analysis and Visualization in Python for Ecologists](https://datacarpentry.org/python-ecology-lesson/index.html) lesson.\n",
     "\n",
     "---\n",
     "## How to use a Jupyter Notebook\n",
     "Online Resources:\n",
     "- https://jupyter-notebook-beginner-guide.readthedocs.io/en/latest/index.html\n",
-    "- https://www.packtpub.com/books/content/getting-started-jupyter-notebook-part-1\n",
+    "- https://code.visualstudio.com/docs/datascience/jupyter-notebooks \n",
     "\n",
     "Useful Tips:\n",
     "- The notebook autosaves\n",
