--- a/notebooks/Intro_to_Python_Day1_Pt5.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt5.ipynb
@@ -5,14 +5,14 @@
    "id": "09120bc3",
    "metadata": {},
    "source": [
-    "# CIC Carpentries Workshop - Day 1 - Part 5\n",
+    "# CIDS Carpentries Workshop - Day 1 - Part 5\n",
     "This lesson is adapted from the Data Carpentries [Data Analysis and Visualization in Python for Ecologists](https://datacarpentry.org/python-ecology-lesson/index.html) lesson.\n",
     "\n",
     "---\n",
     "## How to use a Jupyter Notebook\n",
     "Online Resources:\n",
     "- https://jupyter-notebook-beginner-guide.readthedocs.io/en/latest/index.html\n",
-    "- https://www.packtpub.com/books/content/getting-started-jupyter-notebook-part-1\n",
+    "- https://code.visualstudio.com/docs/datascience/jupyter-notebooks \n",
     "\n",
     "Useful Tips:\n",
     "- The notebook autosaves\n",
@@ -403,7 +403,7 @@
     "# Do an inner merge of \"survey_sub\" and \"species_sub\", store the result to \"merged_inner\"\n",
     "# In this case `species_id` is the only column name in  both dataframes, so if we skipped `left_on`\n",
     "# And `right_on` arguments we would still get the same result\n",
-    "merged_inner"
+    "merged_inner ="
    ]
   },
   {
@@ -467,7 +467,7 @@
    "outputs": [],
    "source": [
     "# Create \"merged_left\", a left merge of \"survey_sub\" (left) and \"species_sub\" right\n",
-    "\n",
+    "merged_left =\n",
     "# Now check what we've done\n"
    ]
   },
