--- a/notebooks/Intro_to_Python_Day1_Pt6.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt6.ipynb
@@ -5,15 +5,14 @@
    "id": "9f9b762f",
    "metadata": {},
    "source": [
-    "# CIC Carpentries Workshop - Day 1 - Part 6\n",
-    "# Data Workflows and Automation\n",
+    "# CIDS Carpentries Workshop - Day 1 - Part 6\n",
     "This lesson is adapted from the Data Carpentries [Data Analysis and Visualization in Python for Ecologists](https://datacarpentry.org/python-ecology-lesson/index.html) lesson.\n",
     "\n",
     "---\n",
     "## How to use a Jupyter Notebook\n",
     "Online Resources:\n",
     "- https://jupyter-notebook-beginner-guide.readthedocs.io/en/latest/index.html\n",
-    "- https://www.packtpub.com/books/content/getting-started-jupyter-notebook-part-1\n",
+    "- https://code.visualstudio.com/docs/datascience/jupyter-notebooks \n",
     "\n",
     "Useful Tips:\n",
     "- The notebook autosaves\n",
@@ -31,7 +30,6 @@
     "### Questions\n",
     "\n",
     " - Can I automate operations in Python?\n",
-    "\n",
     " - What are functions and why should I use them?\n",
     "\n",
     "### Objectives\n",
@@ -49,7 +47,7 @@
    "id": "a93f92fe",
    "metadata": {},
    "source": [
-    "## Intro\n",
+    "## Data and Automation in Python\n",
     "So far, we’ve used Python and the pandas library to explore and manipulate individual datasets by hand, much like we would do in a spreadsheet. The beauty of using a programming language like Python, though, comes from the ability to automate data processing through the use of loops and functions."
    ]
   },
@@ -59,7 +57,7 @@
    "metadata": {},
    "source": [
     "--- \n",
-    "# For loops\n",
+    "## For loops\n",
     "Loops allow us to repeat a workflow (or series of actions) a given number of times or while some condition is true. We would use a loop to automatically process data that’s stored in multiple files (daily values with one file per year, for example). Loops lighten our work load by performing repeated tasks without our direct involvement and make it less likely that we’ll introduce errors by making mistakes while processing each file by hand.\n",
     "\n",
     "Let’s write a simple for loop that simulates what a kid might see during a visit to the zoo:"
@@ -157,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the os module\n",
+    "# Import the pathlib module\n",
     "\n",
     "# Make a directory '../data/yearly_files'\n",
     "\n"
@@ -168,7 +166,7 @@
    "id": "0a4e5bc1",
    "metadata": {},
    "source": [
-    "The command `os.mkdir` is equivalent to `mkdir` in the shell (linux/mac). Just so we are sure, we can check that the new directory was created within the data folder:"
+    "The command `Path.mkdir` is equivalent to `mkdir` in the shell (linux/mac). Just so we are sure, we can check that the new directory was created within the data folder:"
    ]
   },
   {
